Better doco, turn off debug mode in container.

--- a/py/Dockerfile
+++ b/py/Dockerfile
@@ -1,13 +1,14 @@
 FROM python:3.7.0-alpine3.8
 MAINTAINER Kamal Advani "kamal.advani@namingcrisis.net"
 
+# Env
+ENV REFRESHED_AT 2018-08-05-1047
+ENV PYTHONPATH PYTHONPATH=wordfinder:${PYTHONPATH}
+ENV SD_WORDFINDER_CONTAINER true
+
 # Data
 ADD wordfinder /app/wordfinder
 COPY requirements.txt /app
-
-# Env
-ENV PYTHONPATH PYTHONPATH=wordfinder:${PYTHONPATH}
-ENV SD_WORDFINDER_CONTAINER true
 
 # Container Installs
 RUN pip install -r /app/requirements.txt
